
* Arctan, тест для Arctan;
* простой классификатор MNIST;
* добавлен слой Gain, тест для Gain;
* в классы сети добавлен диагностический метод dump();
* в SoftMax и ANN добавленны ассерты;
* добавлен прототип классификатора для MNIST, вроде даже работает;
* добавлена поддержка OpenMP;

* ReLUx и тест;
* ELU и тест;
* метод Model::addLayer() теперь реализован через вариативный шаблон и может принимать дополнительные аргументы;
* SELU и тест;
* инициализация Layer;

* добавлен отладочный слой Assertion для отслеживания ошибок при передаче данных между слоями;
* добавлена библиотека для тестирования нейросетевых моделей;
* класс Arctan переведен на библиотеку юнит-тестирования моделей;

* упорядочен механизм работы с ГСЧ;
* классификатор дает на MNIST ошибку порядка 3.7%;

* -Wall
* -Wextra

* ReLU - переделан тест;
* добавлен пример генерации картинок для TestModel -- fuzzy2jpeg;
TODO: подумать о переделке DataHolder/Tensor/tensormath  в Абстрактную Фабрику или типа того, дабы сделать CUDA;

* Tensor объединен с tensormath и вынесен из DataHolder;
* в корневой main.cpp добавлено измерение времени;

* добавлен Timer.hpp для измерения времени работы;
* расширено тестирование DataHolder;

* добавлено измерение таймингов прямого и обратного распространения ошибки и обучения в класс тестирования;
* обновлены комментарии для Doxygen;

* оптимизация Tensor::val();
* добавлен код для цветного вывода текста в консоль -- Console.hpp
* статистика по тестированию теперь цветная;
* добавлен тест на оператор поворота в трехмерном пространстве TestRot3;
* тест для Layer модифицирован для оператора поворота;

* добавлен слой Dropout;
* добавлен поддержка Dropout в ModelTest;
* добавлено распределение Бернулли в Tensor;
* добавлено поэлементное перемножение тензоров Tensor::prod();
* добавлена рассылка событий по сети, для управления отдельными слоями и компонентами;

* добавлен метод Tensor::prodapp();
* обновлен код Gain переходом на Tensor::prod() и prodapp();