@@ -13,7 +13,7 @@ class SimpleTutor : public AbstractTutor<T> {
 public:
     SimpleTutor(const SimpleTutor&) = delete;
     SimpleTutor(T dt=static_cast<T>(0.1f)) : AbstractTutor<T>(), dt_(dt)   {};
-    SimpleTutor(T dt, const std::vector<T>& lambdas) : dt_(dt),  AbstractTutor<T>(lambdas) {};
+    SimpleTutor(T dt, const std::vector<T>& lambdas) : AbstractTutor<T>(lambdas), dt_(dt) {};
     ~SimpleTutor() = default;
 
     void batchEnd() override {
