@@ -14,6 +14,7 @@ all:
 	make -C ReLUx
 	make -C ELU
 	make -C SELU
+	make -C Dropout
 run:
 	clear
 	make -C DataHolder run
@@ -31,6 +32,7 @@ run:
 	make -C ReLUx run
 	make -C ELU run
 	make -C SELU run
+	make -C Dropout run
 	echo 'Тестирование удачно завершено!'
 clean:
 	make -C DataHolder clean
@@ -48,4 +50,5 @@ clean:
 	make -C ReLUx clean
 	make -C ELU clean
 	make -C SELU clean
+	make -C Dropout clean
 
