@@ -2,7 +2,7 @@ RM=rm -f
 TARGET=unit
 all:
 	clear
-	g++ -m64 -Wall -Wextra -std=c++20 -g -I .. -I ../../ -ljpeg main.cpp -o $(TARGET).64
+	g++ -m64 -std=c++20 -g -I .. -I ../../ -ljpeg main.cpp -o $(TARGET).64
 #	g++ -m32 -Wall -std=c++20 -g -I .. -I ../../ -ljpeg main.cpp -o $(TARGET).32
 
 run:
